force-app/main/default/objects/SAJ_Analyze_Job__c/SAJ_Analyze_Job__c.object-meta.xml
<CustomObject>
    <label>Analyze Job</label>
    <nameField>
        <label>Analyze Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analyze Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>