force-app/main/default/objects/SAJ_Analyze_Job__c/fields/SAJ_Default_Assign__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Default_Assign__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default Assign</label>
    <type>Checkbox</type>
</CustomField>