force-app/main/default/objects/SAJ_Analyze_Job__c/fields/SAJ_Enabled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Enabled_End_Date__c</fullName>
    <label>Enabled End Date</label>
    <type>Date</type>
</CustomField>