force-app/main/default/objects/SAJ_Analyze_Job__c/fields/SAJ_Operation__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>