force-app/main/default/objects/SAJ_Analyze_Job__c/recordTypes/Environment_Job.recordType-meta.xml
<RecordType>
    <fullName>Environment_Job</fullName>
    <active>true</active>
    <label>Environment Job</label>
</RecordType>