force-app/main/default/objects/SAJ_Analyze_Job__c/recordTypes/Release_Job.recordType-meta.xml
<RecordType>
    <fullName>Release_Job</fullName>
    <active>true</active>
    <label>Release Job</label>
</RecordType>