force-app/main/default/objects/SAJ_Analyze_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAJ_Default_Assign__c</columns>
    <columns>SAJ_Enabled_End_Date__c</columns>
    <columns>SAJ_Enabled_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>